<resources>
    <string name="app_name">Digitruk Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--LANGUAGE-->
    <string name="nodata">No Data</string>

    <!--LOGIN-->
    <string name="login">LOG IN</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot Password ?</string>

    <!--DASHBOARD-->
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_onprogress">On-Progress</string>
    <string name="dashboard_pending">Pending</string>
    <string name="dashboard_active_jo">Active Job Orders</string>

    <!--SETTINGS-->
    <string name="settings">Settings</string>
    <string name="settings_bahasa">Language</string>
    <string name="settings_save">Save</string>
    <string name="settings_interval">Background Update GPS</string>

    <!--LOG OUT-->
    <string name="Logout">Logout</string>

    <!--HELP N SUPPORT-->
    <string name="hns">Help and Support</string>
    <string name="hns_l1">Administrator support is here to help.</string>
    <string name="hns_l2">You can call administrator by tapping button below.</string>
    <string name="hns_call">Call Admin</string>

    <!--HISTORY ORDER-->
    <string name="order_history">History Order</string>
    <string name="order_history_active">Active</string>
    <string name="order_history_onprogress">On-Progress</string>
    <string name="order_history_completed">Completed</string>

    <!--DETAIL ORDER-->
    <string name="dp">Detail Order</string>
    <string name="dpa">Active Detail Order</string>
    <string name="dpd">Complete Detail Order</string>

    <string name="dp_vendorinfo">Vendor Information</string>
    <string name="dp_vendorname">Vendor Name</string>
    <string name="dp_vendorcpname">Vendor CP Name</string>
    <string name="dp_vendorcpphone">Vendor CP Phone</string>

    <string name="dp_principleinfo">Principle Information</string>
    <string name="dp_principlename">Principle Name</string>
    <string name="dp_principlecpname">Principle CP Name</string>
    <string name="dp_principlecpphone">Principle CP Phone</string>

    <string name="dp_cargoinfo">Cargo Information</string>
    <string name="dp_estpick">Estimated Pick Date</string>
    <string name="dp_estdelivered">Estimated Delivered Date</string>
    <string name="dp_estvolume">Estimated Volume</string>
    <string name="dp_hullno">Hull No</string>
    <string name="dp_cargotruck">Truck</string>
    <string name="dp_cargotrucktype">Truck Type</string>
    <string name="dp_cargodetails">Cargo Details</string>
    <string name="dp_cargonote">Notes</string>

    <string name="dp_infobarang">Package Info</string>
    <string name="dp_volume">Volume</string>
    <string name="dp_netweight">Net Weight</string>
    <string name="dp_quantitiy">Quantity</string>
    <string name="dp_rutelaut">Sea Route Info</string>
    <string name="dp_desclaut">This trip uses the sea route!</string>
    <string name="dp_veselname">Vessel Name</string>
    <string name="dp_precariage">Pra Carriage</string>
    <string name="dp_maincariage">Main Carriage</string>
    <string name="dp_inforoute">Route Info</string>
    <string name="dp_biaya">Cost</string>
    <string name="dp_leadtime">Lead Time</string>
    <string name="dp_eta">Estimate Timeese Arrival</string>
    <string name="dp_etd">Estimate Time Departure</string>
    <string name="dp_totalleadtime">Total Lead Time</string>
    <string name="dp_totalbiaya">Total Cost</string>
    <string name="dp_pesanberita">Would you like to receive this order ?</string>
    <string name="dp_drivername">Driver Name</string>
    <string name="dp_driverphone">Driver Phone</string>
    <string name="dp_trucknumber">Truck Number</string>
    <string name="dp_trucktype">Truck Type</string>
    <string name="dp_update">Update</string>

    <!--POP UP-->
    <string name="popup_announcement">Confirmation</string>
    <string name="popup_announcement2">Are you sure accept this job?</string>
    <string name="popup_announcement3">Are you sure want to update state this job?</string>
    <string name="popup_yes">Yes</string>
    <string name="popup_no">No</string>

    <!--ORDER REJECTED-->
    <string name="order_rejected">Order Rejected</string>
    <string name="order_rejected_input">Input Your Text Here</string>

    <!--CHECKPONT-->
    <string name="checkpoint">Checkpoint</string>
    <string name="checkpoint_status">Status</string>
    <string name="checkpoint_notes">Notes</string>
    <string name="checkpoint_picture">Pictures</string>

    <!--HISTORY CHECKPOINT-->
    <string name="history_cp">Riwayat Checkpoin</string>
    <string name="history_cp_completed">Completed</string>
    <string name="history_cp_onprogress">On-Progress</string>
    <string name="history_cp_loading">Loading</string>

    <!--ORDER ACCEPTED-->
    <string name="order_accepted">Order Accepted</string>

    <!--ORDER HAS BEEN DELIVERED-->
    <string name="ohbd">Order Has Been Delivered</string>

    <!--SIGNATURE-->
    <string name="signature">Signature</string>

    <!--CAMERA-->
    <string name="camera">Camera</string>
    <string name="camera_desc">Pictures</string>
    <string name="camera_takeit">Take it Again</string>

    <!--VIEW PROFILE-->
    <string name="view_profile">View Profile</string>
    <string name="view_profile_nodriver">Driver Number</string>
    <string name="view_profile_name">Name</string>
    <string name="view_profile_phone">Phone</string>
    <string name="view_profile_address">Addess</string>

    <!--NAVIGATION-->
    <string name="nlt">Navigation of Destination Location</string>

    <!--DESTINATION-->
    <string name="destination_location">Destination Location</string>

    <!--ADMINISTRATOR-->
    <string name="administrator">Administrator</string>

    <!--HEADER-->
    <string name="track_order_list">Track Order List</string>
    <string name="tracking_history">Tracking History</string>

    <!--VIEW ORDER-->
    <string name="view_order">View Order</string>

    <!--OTHER-->
    <string name="nla">No Location Available</string>
    <string name="problem">Problem</string>
    <string name="maps">Maps</string>
    <string name="reason">Reason can not be empty</string>
    <string name="update_status">Update Status</string>
    <string name="alasantolak">Write down your reason below</string>
    <string name="send">Send</string>
    <string name="alasantidakbolehkosong">Reason cannot be empty</string>
    <string name="addphoto">Add Photo</string>
    <string name="confirm">Confirmation</string>
    <string name="confirmdeletfoto">Are you sure want to delete this image?</string>

    <!--TITLE BAR-->
    <string name="updatecekpoint">Update Checkpoint</string>
    <string name="updateqr">Update Container</string>
    <string name="history">History</string>
    <string name="admin">Message Admin</string>

    <!--VESION-->
    <string name="version">Version 1.6.2</string>
    <string name="warning_location">location is required</string>
    <string name="warning_cp">contact person is required</string>
    <string name="warning_item_info">item info is required</string>
    <string name="add_stop_location">Add Stop Location</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="new_stop_location">New Stop Location</string>
    <string name="cp">Contact Person</string>
    <string name="item_info">Item Info</string>
    <string name="remark">Remark</string>
    <string name="confirm_service">Confirmation Service</string>
    <string name="confirm_delete">Are you sure want to delete this ?</string>
    <string name="confirm_delete_stop_location">This location can\'t be undo after you delete this!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stop_location">stop location</string>
    <string name="type">Type</string>
    <string name="msg_new_assigned_jo">New assigned Job Order</string>
    <string name="pick_location">Pick a location</string>
    <string name="message">Messages</string>
    <string name="type_your_message">type your message</string>
    <string name="no_update_location">No Update Location</string>
    <string name="last_update_on">Last update on</string>
    <string name="unable_to_load_image">Unable to load image</string>
    <string name="no_image">No Image Provided</string>
    <string name="jo_update_image">Job Order Update Image</string>
    <string name="last_position">Last Position</string>


</resources>
