<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/type"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/location"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/stop_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:editable="false"
                android:textColor="@color/Grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/cp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/view_profile_name"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/Grey"/>

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:singleLine="true"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/view_profile_name"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cp"
                android:singleLine="true"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/item_info"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/Grey"/>
            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/remark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Grey"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>